<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/margin_X0_5"
    app:cardCornerRadius="@dimen/margin_X0_5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_X2">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bookImage"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bookTitle"
            style="@style/Title.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_X1"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/bookImage"
            app:layout_constraintTop_toTopOf="@id/bookImage"
            tools:text="@string/title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bookSubtitle"
            style="@style/Body1.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_blue"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/bookTitle"
            app:layout_constraintTop_toBottomOf="@id/bookTitle"
            tools:text="@string/subtitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bookPublishDate"
            style="@style/Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/bookImage"
            app:layout_constraintStart_toStartOf="@id/bookTitle"
            tools:text="@string/publish_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bookCategoties"
            style="@style/Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_X0_5"
            app:layout_constraintStart_toStartOf="@id/bookImage"
            app:layout_constraintTop_toBottomOf="@id/bookImage"
            tools:text="@string/categories" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bookAddedDate"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_X0_5"
            android:drawableStart="@drawable/ic_calendar_plus"
            android:drawablePadding="@dimen/margin_X1"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/bookImage"
            app:layout_constraintTop_toBottomOf="@id/bookCategoties"
            tools:text="24-08-2020" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>